--- a/Ejercicio 1/index.html
+++ b/Ejercicio 1/index.html
@@ -3,11 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/style.css">
         <title>Exercise 1</title>
     </head>
     <body>
         <div id="conteiner">
-        <h1 class="titulos">logo</h1>
+            <div id="header">
+                <div id="containerLogo">
+                    <h1 class="titulos">logo</h1>
+                </div>
+            </div>
         </div>
     </body>
 </html> 
